Do not render html version in this case, add #hide

--- a/readme.ipynb
+++ b/readme.ipynb
@@ -27,39 +27,60 @@
  "nbformat_minor": 2,
  "cells": [
   {
-   "source": [
-    "from notebook_helper import *"
-   ],
    "cell_type": "code",
-   "metadata": {},
    "execution_count": 1,
-   "outputs": []
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#HIDE\n",
+    "from notebook_helper import *"
+   ]
   },
   {
    "source": [
     "# Template mySociety Jupyter notebook\n",
     "\n",
     "Template with submodule for helper functions, and dockerfile to set chrome up correctly for charts. \n",
-    "The chrome reference can be removed from the dockerfile if not doing any chart rendering. \n",
-    "\n",
-    "Should just work in VSCode, be careful if you start storing config in `devcontainer.json` as currently not excluded from git.\n",
     "\n",
     "This is useful for when the readme should include some analysis of files elsewhere in the repo and you don't want to copy and paste. \n",
-    "\n",
-    "The downside of this approach is the readme.md cannot then be edited directly.\n",
     "\n",
     "`readme.ipynb` can be set up as a notebook, which then renders itself to `readme.md`. \n",
     "\n",
     "Example of this approach: https://github.com/mysociety/composite_uk_imd\n",
     "\n",
+    "\n",
+    "## How to use\n",
+    "\n",
+    "Should just work in VSCode, be careful if you start storing config in `devcontainer.json` as currently not excluded from git.\n",
+    "\n",
     "pandas and altair are automatically loaded as `pd` and `alt`. The mysociety theme is already initalised. \n",
     "\n",
     "Examples below show basic usage.\n",
     "\n",
-    "By default `render_to_markdown` will not print the input box (so code can be hidden). Add `include_input=True` as below to include it."
+    "By default `render_to_markdown` will not print the input box (so code can be hidden). Add `include_input=True` as below to include it.\n",
+    "\n",
+    "The chrome reference can be removed from the dockerfile if not doing any chart rendering. Currently the blank requirements.txt is not referenced in the dockerfile to avoid a layer, you'll need to add that if adding more requirements to the notebook.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "# Example code\n",
+    "\n",
+    "Start the notebook by pulling in the general set of helpers. Start the codeblock with `#HIDE` to exclude it from being displayed in render (example at top of `readme.ipynb`)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "from notebook_helper import *"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 2,
+   "outputs": []
   },
   {
    "source": [
@@ -72,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,40 +117,10 @@
   },
   {
    "source": [
-    "And as HTML:   "
+    "You can just render as HTML with `display(source)` but github markdown doesn't like the styling that gets attached to this. "
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "  Vertical  Horizontal  double_h\n",
-       "0        A          28        56\n",
-       "1        B          55       110\n",
-       "2        C          43        86\n",
-       "3        D          91       182\n",
-       "4        E          81       162\n",
-       "5        F          53       106\n",
-       "6        G          19        38\n",
-       "7        H          87       174\n",
-       "8        I          52       104"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Vertical</th>\n      <th>Horizontal</th>\n      <th>double_h</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A</td>\n      <td>28</td>\n      <td>56</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>B</td>\n      <td>55</td>\n      <td>110</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>C</td>\n      <td>43</td>\n      <td>86</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>D</td>\n      <td>91</td>\n      <td>182</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>E</td>\n      <td>81</td>\n      <td>162</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>F</td>\n      <td>53</td>\n      <td>106</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>G</td>\n      <td>19</td>\n      <td>38</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>H</td>\n      <td>87</td>\n      <td>174</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>I</td>\n      <td>52</td>\n      <td>104</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
-   "source": [
-    "source"
-   ]
   },
   {
    "source": [
@@ -171,23 +162,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "writing: _notebook_resources/output_7_0.png\n",
-      "Written to readme.md at 2021-03-16 12:31:38.282375\n",
-      "writing: _notebook_resources/output_7_0.png\n",
-      "Written to readme.html at 2021-03-16 12:31:43.509659\n"
+      "writing: _notebook_resources/readme_8_0.png\nWritten to readme.md at 2021-03-16 14:43:28.029750\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'sender_to_html' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-7632c80e1c72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnotebook_helper\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mrender_to_markdown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minclude_input\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0msender_to_html\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'sender_to_html' is not defined"
      ]
     }
    ],
    "source": [
     "#This is how we get a notebook to render itself\n",
     "#runs based on file rather than current content, so remember to save first.\n",
+    "from notebook_helper import *\n",
     "render_to_markdown(include_input=True)\n",
     "render_to_html()"
    ]
