Tidied up default folder structure

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -29,40 +29,11 @@
    "execution_count": 3,
    "source": [
     "#HIDE\n",
+    "import setup\n",
     "from notebook_helper import *\n",
     "notebook_setup()"
    ],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Template mySociety Jupyter notebook\n",
-    "\n",
-    "Template with submodule for helper functions, and dockerfile to set chrome up correctly for charts. \n",
-    "\n",
-    "This is useful for when the readme should include some analysis of files elsewhere in the repo and you don't want to copy and paste. \n",
-    "\n",
-    "`readme.ipynb` can be set up as a notebook, which then renders itself to `readme.md`. \n",
-    "\n",
-    "Example of this approach: https://github.com/mysociety/composite_uk_imd\n",
-    "\n",
-    "\n",
-    "## How to use\n",
-    "\n",
-    "Should just work in VSCode, be careful if you start storing config in `devcontainer.json` as currently not excluded from git.\n",
-    "\n",
-    "pandas and altair are automatically loaded as `pd` and `alt`. The mysociety theme is already initalised. \n",
-    "\n",
-    "Examples below show basic usage.\n",
-    "\n",
-    "By default `render_to_markdown` will not print the input box (so code can be hidden). Add `include_input=True` as below to include it.\n",
-    "\n",
-    "The chrome reference can be removed from the dockerfile if not doing any chart rendering. Currently the blank requirements.txt is not referenced in the dockerfile to avoid a layer, you'll need to add that if adding more requirements to the notebook.\n",
-    "\n",
-    "The Dockerfile is set up to work with being viewed on binder."
-   ],
    "metadata": {}
   },
   {
@@ -241,30 +212,6 @@
       ]
      },
      "metadata": {}
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "#This is how we get a notebook to render itself\n",
-    "#runs based on file rather than current content, so remember to save first.\n",
-    "from notebook_helper import *\n",
-    "render_to_markdown(include_input=True)\n",
-    "render_to_html()"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "writing: _notebook_resources/readme_8_0.png\n",
-      "Written to readme.md at 2021-06-30 13:53:57.405496\n",
-      "writing: _notebook_resources/readme_8_0.png\n",
-      "Written to readme.html at 2021-06-30 13:54:02.123316\n"
-     ]
     }
    ],
    "metadata": {}
